<resources>
    <string name="app_name">Android User Communications</string>
    <string name="launch_toast_activity">Launch Toast Activity</string>
    <string name="launch_dialog_activity">Launch Dialog Activity</string>
    <string name="launch_notification_activity">Launch Notification Activity</string>
    <string name="launch_snackbar_activity">Launch Snackbar Activity</string>
    <string name="close">Close</string>

    <string name="toast_duration">Duration:</string>

    <string name="position">Position:</string>
    <string name="bottom">Bottom</string>
    <string name="center">Center</string>

    <string name="show_custom_toast">Show Custom Toast</string>
    <string name="show_toast">Show Toast</string>
    <string name="rshort">short</string>
    <string name="rlong">long</string>
    <string name="textview">TextView</string>
    <string name="title_activity_snack_bar">SnackBar</string>
    <string name="show_regular_snackbar">Show Regular Snackbar</string>
    <string name="show_action_snackbar">Show Action Snackbar</string>
    <string name="show_snackbar">Show SnackBar</string>
    <string name="button">Button</string>
    <string name="test">test</string>
    <string name="action_snackbar">Action SnackBar</string>
    <string name="custom_dialog">Custom Dialog</string>
    <string name="simple_dialog">Simple Dialog</string>
    <string name="single_action">Single Action</string>

</resources>
