<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.training.MainActivity">

    <Button
        android:id="@+id/btnLaunchToast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_toast_activity"
        app:layout_constraintBottom_toTopOf="@+id/btnLaunchSnackBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnLaunchSnackBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_snackbar_activity"
        app:layout_constraintBottom_toTopOf="@+id/btnLaunchDialog"
        app:layout_constraintTop_toBottomOf="@+id/btnLaunchToast"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btnLaunchDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_dialog_activity"
        app:layout_constraintBottom_toTopOf="@+id/btnNotification"
        app:layout_constraintTop_toBottomOf="@+id/btnLaunchSnackBar"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/btnNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_notification_activity"
        app:layout_constraintTop_toBottomOf="@+id/btnLaunchDialog"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btnClose" />

    <Button
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnNotification" />

</android.support.constraint.ConstraintLayout>
