<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context="com.example.training.DialogActivity">

    <Button
        android:id="@+id/buttonSimpleDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/simple_dialog"
        app:layout_constraintBottom_toTopOf="@+id/buttonCustomDialog"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonCustomDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/custom_dialog"
        app:layout_constraintBottom_toTopOf="@+id/buttonSingleAction"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSimpleDialog" />

    <Button
        android:id="@+id/buttonSingleAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_action"
        app:layout_constraintBottom_toTopOf="@+id/buttonClose"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCustomDialog" />

    <Button
        android:id="@+id/buttonClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSingleAction" />

</android.support.constraint.ConstraintLayout>
