<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.training.SnackBar">

    <Button
        android:id="@+id/btnSnackBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/show_regular_snackbar"
        app:layout_constraintBottom_toTopOf="@+id/btnCustomSnackBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.712"
        app:layout_constraintHorizontal_bias="0.502" />

    <Button
        android:id="@+id/btnCustomSnackBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_action_snackbar"
        app:layout_constraintLeft_toLeftOf="@+id/btnSnackBar"
        app:layout_constraintRight_toRightOf="@+id/btnSnackBar"
        android:layout_marginBottom="68dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSnackClose" />

    <Button
        android:id="@+id/btnSnackClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="144dp"
        android:text="@string/close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintLeft_toLeftOf="@+id/btnCustomSnackBar"
        app:layout_constraintRight_toRightOf="@+id/btnCustomSnackBar" />

</android.support.constraint.ConstraintLayout>
